--- a/admin.css
+++ b/admin.css
@@ -1,3 +1,24 @@
 .nav-link:hover   {
     background-color: dimgrey;
+    border-radius: 5px;
+}
+
+div ul li.active a{
+  color: white;
+  background: #1e1e1e;
+  border-left-color: cyan;
+  border-radius: 5px;
+}
+
+div ul ul{
+  position: static;
+  display: none;
+}
+
+div ul .feat-show.show{
+  display: block;
+}
+
+div ul .serv-show.show1{
+  display: block;
 }
