Menambahkan badges pada masing-masing update menu di halaman dashboard

--- a/admin.css
+++ b/admin.css
@@ -25,3 +25,14 @@ div ul .feat-show.show{
 div ul .serv-show.show1{
   display: block;
 }
+
+div ul li a span  {
+  position: absolute;
+  transform: translateY(-50%);
+  transition: transform 0.4s;
+}
+
+div ul li a span.rotate{
+  transform: translateY(-50%) rotate(-180deg);
+  transition: transform 0.4s;
+}
