--- a/admin.css
+++ b/admin.css
@@ -46,3 +46,12 @@ div ul li a span.rotate{
   width: 60%;
   align-self: center;
 }
+
+.col-md-2 {
+  height: 100% !important;
+}
+
+.col-md-10 {
+  z-index: -1;
+  left: 15%;
+}
